samples/_failures_safe/1761792963_cdc875_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85740ea6.c: In function ‘main’:
./samples/SAFE/__tmp_85740ea6.c:131:5: error: expected declaration or statement at end of input
  131 |     int choice = get_valid_int("Enter choice (1-2): ", 1, 2);
      |     ^~~
